# Build
add_executable(aufgabe2bis4
  aufgabe2bis4.cpp
)
target_link_libraries(aufgabe2bis4
m
)

add_executable(aufgabe5
  aufgabe5.cpp
)
target_link_libraries(aufgabe5
m
)

add_executable(aufgabe7
aufgabe7.cpp
circle.cpp
)
target_link_libraries(aufgabe7
m
)

  #${GLFW_LIBRARIES}
  #m)
#add_dependencies(example glfw ${COPY_BINARY})

# Build tests
#add_executable(tests
 # tests.cpp
  #vec2.cpp
  #mat2.cpp
  #rectangle.cpp
  #circle.cpp)
#target_link_libraries(tests
 # ${GLFW_LIBRARIES})

